minor html fixes

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
           <h2 class="places__title mobile-wrapper">Куршская &nbsp; коса</h2>
           <div class="places__website">
             <p class="places__url-heading">url</p>
-            <a class="places__link" href="https://park-kosa.ru" 
+            <a class="places__link" href="http://park-kosa.ru" 
               target="_blank" rel="noopener">park-kosa.ru</a>
           </div>
           <img class="places__image" src="./images/place-kosa.jpg" alt="Пейзаж Куршской косы">
@@ -145,8 +145,8 @@
           <h2 class="places__title mobile-wrapper">Карелия</h2>
           <div class="places__website">
             <p class="places__url-heading">url</p>
-            <a class="places__link" href="https://vodlozero.ru" 
-              target="_blank" rel="noopener">https://vodlozero.ru/</a>
+            <a class="places__link" href="http://vodlozero.ru" 
+              target="_blank" rel="noopener">http://vodlozero.ru/</a>
           </div>
           <img class="places__image" src="./images/place-karelia.jpg" alt="Водлоозеро">
           <div class="places__main-text mobile-wrapper">
