--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   </header>
   <main class="content">
     <section class="lead container">
-      <h1 class="lead__title mobile-wrapper">Путешествия по России</h1>
+      <h1 class="lead__title">Путешествия по России</h1>
       <p class="lead__subtitle">Настоящая страна не в выпусках новостей, а здесь.</p>
       <figure class="lead__illustration">
         <img class="lead__image" src="./images/lead-polka.jpg" alt="Полка в поезде">
