refactor: html footer

--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
         </li>
       </ul>
     </nav>
-    <p class="footer__copyright">&copy; 2021. Ирисова Алёна</p>
+    <p class="footer__copyright">&copy; 2021</p>
   </footer>
 </body>
 </html>
